--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"test": "cypress open",
 		"test:headless": "cypress run",
-		"test:headless:chrome": "cypress run --browser chrome"
+		"test:headless:chrome": "cypress run --browser chrome",
+		"test:headless:assertions": "cypress run --spec cypress/e2e/assertions.cy.js"
 	},
 	"keywords": [],
 	"author": "",
